--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Your Name">
+    <meta name="description" content="A GitHub-style personal website.">
+    <title>Your Name - GitHub Page</title>
+    
+    <!-- Link to GitHub's default stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/4.0.0/github-markdown.css" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f6f8fa;
+            color: #24292f;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #24292f;
+            color: white;
+            padding: 15px 0;
+            text-align: center;
+        }
+        header a {
+            color: white;
+            text-decoration: none;
+        }
+        main {
+            padding: 30px;
+        }
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        .github-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .github-header img {
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+        }
+        .profile-info {
+            flex-grow: 1;
+            text-align: right;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #24292f;
+            color: white;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Your Name's GitHub Page</h1>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="github-header">
+                <div>
+                    <img src="https://avatars.githubusercontent.com/u/12345678?v=4" alt="Your Avatar">
+                </div>
+                <div class="profile-info">
+                    <h2>Your Name</h2>
+                    <p>@yourusername</p>
+                    <p><a href="https://github.com/yourusername">GitHub Profile</a></p>
+                </div>
+            </div>
+            <div class="content">
+                <h3>About Me</h3>
+                <p>This is a brief description about you. Write something interesting here!</p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Your Name</p>
+    </footer>
+
+</body>
+</html>
 
